ruma/tests/ui/02-invalid-id-macros.rs
fn main() {
    let _ = ruma::device_key_id!("ed2519:JLAFKJWSCS");
    let _ = ruma::event_id!("39hvsi03hlne:example.com");
    let _ = ruma::event_id!("acR1l0raoZnm60CBwAVgqbZqoO/mYU81xysh1u7XcJk");
    let _ = ruma::room_alias_id!("alias:server.tld");
    let _ = ruma::room_id!("1234567890:matrix.org");
    let _ = ruma::room_version_id!("");
    let _ = ruma::server_key_id!("ed219:Abc_1");
    let _ = ruma::server_name!("");
    let _ = ruma::user_id!("user:ruma.io");
}
